tests/types/errors/bitwise_bool_operand.mog
#!strict
var flag bool = true
var mask i32 = 1
print(flag & mask)
